# jam2song

./: .gitignore  DESIGN_HISTORY.md  README.md  jam2song-spec.md  pyproject.toml
src/jam2song/: __main__.py  analyzer.py  arranger.py  cache.py  classifier.py  models.py  renderer.py  segmenter.py  structures.py
src/jam2song/gui/: index.html  server.py
src/jam2song/structures/: ambient_drift.json  call_and_response.json  condensed_jam.json  highlight_reel.json  loop_build_drop.json  micro_edit.json  slow_burn.json  verse_chorus.json
tests/: test_arranger.py  test_renderer.py  test_segmenter.py  test_structures.py
