[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jam2song"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.10",
    "soundfile>=0.12",
    "numpy>=1.26",
    "scipy>=1.12",
    "imageio-ffmpeg>=0.6.0",
]

[project.optional-dependencies]
mp3 = ["pydub>=0.25"]
dev = ["pytest>=8.0"]

[project.scripts]
jam2song = "jam2song.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jam2song"]
